# dbt-demo-bq

./: .gitignore  LICENSE  README.md  pyproject.toml
dbt_bq/: dbt_project.yml
dbt_bq/models/example/: create_user.sql  my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml  user_increments.sql
